# rag-notes-search

./: .gitignore  README.md  app.py  chroma_exploration.py  index_tracker.json  prompt.py  pyproject.toml  search.py
Notes/Intro psych/:  Test 1 Notes.md  Psychological Disorders.md  Test 2 Notes.md  Test Notes 3.md
Notes/world_music/: Amerindian.md  China.md  Daily_notes.md  First_Reflection_Paper.md  India.md  Indonesia.md  Japan.md  Latin_America.md  Middle East.md  Musical traditions of the US.md  Semester Project.md  Sub-Saharan Africa.md  World Music Launch Page.md
templates/: index.html
