[project]
name = "rag-notes-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "chromadb>=1.5.5",
    "flask>=3.1.3",
    "flask-restful>=0.3.10",
    "torch>=2.11.0",
    "transformers>=5.5.3",
]
